Employee_document table sql fixed along with css z-index fix

--- a/hua-gui/src/main/gui/src/styles.css
+++ b/hua-gui/src/main/gui/src/styles.css
@@ -470,7 +470,7 @@ app-spinner {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    z-index: 5;
+    z-index: 50;
 }
 
 .modal-medium {
@@ -485,7 +485,7 @@ app-spinner {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     animation-name: animatetop;
     animation-duration: 0.4s;
-    z-index: 5;
+    z-index: 50;
 }
 
 @keyframes animatetop {
